<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>By_Dinesh_Saiwal</groupId>
  <artifactId>Jenkins_Project</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
    <build>
    <pluginManagement>
    
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          	<artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>       
          
           <configuration>
			    <compilerArgs>
			      <arg>--add-exports</arg>
			      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
			    </compilerArgs>
				    <fork>true</fork>
				  	  <source>17</source>
				    <target>17</target>
			  </configuration>   
        </plugin>
        	
        	
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          	<artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.3</version>
          
          <configuration>
				<suiteXmlFiles>
					<suiteXmlFile>testng.xml</suiteXmlFile>
				</suiteXmlFiles>
          </configuration>
          
        </plugin> 
        
      </plugins>
    </pluginManagement>
  </build>
  
  <dependencies>

	<dependency>
	    <groupId>org.apache.poi</groupId>
	    	<artifactId>poi</artifactId>
	    <version>5.2.3</version>
	</dependency>

	<dependency>
	    <groupId>org.apache.poi</groupId>
	    	<artifactId>poi-ooxml</artifactId>
	    <version>5.2.3</version>
	</dependency>

	<dependency>
	    <groupId>org.slf4j</groupId>
	    	<artifactId>slf4j-api</artifactId>
	    <version>2.0.16</version>
	</dependency>
	
	<dependency>
	    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>2.0.16</version>
	</dependency>
  
  
  <dependency>
	    <groupId>com.aventstack</groupId>
	  		<artifactId>extentreports</artifactId>
	    <version>5.0.9</version>
	</dependency>
	
<dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-java</artifactId>
    <version>4.31.0</version>
</dependency>
		
	<dependency>
	    <groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
	    <version>5.9.2</version>
	</dependency>

	<dependency>
		<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
		<version>7.5</version>
	</dependency>
	
<dependency>
    <groupId>org.projectlombok</groupId>
    <artifactId>lombok</artifactId>
    <version>1.18.36</version>
    <scope>provided</scope>
</dependency>


		
	<dependency>
		<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
		<version>1.5</version>
	</dependency>
  
  </dependencies>
  
  

  
  
  
  
  
  
  
  
</project>
